--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -99,6 +99,11 @@ footer {
   width: auto;
 }
 
+.rotate {
+  transform: rotate(45deg);
+  transition: 0.5s;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
