--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -104,6 +104,10 @@ footer {
   transition: 0.5s;
 }
 
+.new-item-form button {
+  width: 300px;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
